Reduce font size of comments (src/index.css) .

--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,7 @@ table {
 }
 
 .comments {
-    font-size: large;
+    font-size: small;
 }
 
 table {
@@ -125,7 +125,7 @@ table {
 }
 
 .comments {
-    font-size: x-large;
+    font-size: large;
 }
 
 table {
